# DataBaseProject

./: .gitignore  README.md
app/: CMakeLists.txt  Doxyfile  GUI.pro  GUI.rc  INSTRUKCJA.txt  LICENSE  README.md  main.cpp
app/Logic/: CMakeLists.txt
app/Logic/UIDataModel/: CMakeLists.txt  Model.cpp  Model.h
app/Logic/UIDataModel/AdminModel/: AdminModel.cpp  AdminModel.hpp
app/Logic/UIDataModel/DoctorsModel/: DoctorsModel.cpp  DoctorsModel.hpp
app/Logic/UIDataModel/LoginModel/: LoginModel.cpp  LoginModel.hpp
app/Logic/UIDataModel/Model/: Model.cpp  Model.hpp
app/Logic/UIDataModel/Model/DataStructures/: Doctor.hpp  Patient.hpp  Person.hpp  Personel.hpp  Staff.hpp
app/Logic/UIDataModel/RegistrationModel/: RegistrationModel.cpp  RegistrationModel.hpp
app/Resources/: projectresources.qrc
app/UI/AdminWindow/: AdminWindow.cpp  AdminWindow.hpp  AdminWindow.ui  CMakeLists.txt
app/UI/DoctorsWindow/: CMakeLists.txt  DoctorsWindow.cpp  DoctorsWindow.h  DoctorsWindow.hpp
app/UI/LoginWindow/: CMakeLists.txt  LoginWindow.cpp  LoginWindow.hpp  LoginWindow.ui
app/UI/PatientRegistrationWindow/: CMakeLists.txt  PatientRegistrationWindow.cpp  PatientRegistrationWindow.hpp  PatientRegistrationWindow.ui
app/UICode/: CMakeLists.txt
app/UICode/AdminWindow/: AdminWindow.cpp  AdminWindow.h
app/UICode/DoctorsWindow/: DoctorsWindow.cpp  DoctorsWindow.ui
app/UICode/LoginWindow/: CMakeLists.txt  LoginWindow.cpp  LoginWindow.h
app/UICode/PatientRegistrationWindow/: CMakeLists.txt  PatientRegistrationWindow.h  PatientRegistrationWindow.ui
app/UIController/: CMakeLists.txt
app/UIController/Controller/: CMakeLists.txt  Controller.cpp  Controller.h  Controller.hpp
app/UIController/VirtualController/: CMakeLists.txt  VirtualController.cpp  VirtualController.hpp
mysql/db/: 01
mysql/db_models/: data_grip_schema.uml  data_grip_schema01.uml  db_model_01.mwb
mysql/sources/: advanced.sql  clear_tables.sql  insert_sampel_data.sql  select_doctors.sql  select_login.sql  select_patient_exams.sql  select_patient_medinfo.sql  select_patients.sql  select_staff.sql  tabels_create.sql  test.sql  update_patients.sql
